@startuml vitarerum-domain-model-overview
title Vitarerum Domain Model Overview

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam shadowing false

legend top
  Conceptual overview only. Source of truth is vitarerum-api/app/.../domain.
  Keep detailed tactical models in smaller bounded-context diagrams when a
  context needs more fields than shown here.
endlegend

package "shared kernel" <<SharedKernel>> {
  class ReferenceNumber <<ValueObject>> {
    - value: String
  }
  class EmailAddress <<ValueObject>> {
    - value: String
  }
  class DocumentType <<ValueObject>> {
    - value: String
  }
  enum UseType {
    EXHIBITION
    IN_SITU_VISIT
    OTHER
  }
}

package "identity" <<BoundedContext>> {
  class Institution <<AggregateRoot>> {
    - id: InstitutionId
    - name: String
  }
  class User <<AggregateRoot>> {
    - id: UserId
    - name: String
    - email: String
    - status: UserStatus
    - passwordChangedAt: DateTime?
  }
  class Group <<AggregateRoot>> {
    - id: GroupId
    - name: GroupName
    - institutionId: InstitutionId
  }
  class Permission <<AggregateRoot>> {
    - id: PermissionId
    - userId: UserId
    - groupId: GroupId
  }
  class PasswordResetToken <<Entity>> {
    - tokenHash: String
    - expiresAt: DateTime
    - usedAt: DateTime?
  }
  enum GroupName {
    EXTERNAL
    CURATORIAL
    COLLECTIONS_MANAGEMENT
    DIRECTION
    SYS_ADMIN
  }
  enum UserStatus {
    ACTIVE
    DISABLED
  }
}

package "use_of_collections" <<BoundedContext>> {
  class Proposal <<AggregateRoot>> {
    - id: ProposalId
    - referenceNumber: ReferenceNumber
    - status: ProposalStatus
    - submissionChannel: SubmissionChannel
    - requestedBy: PermissionId?
    - requesterContact: RequesterContact?
    - assignedTo: PermissionId?
    - correctionItems: List of DocumentCorrectionItem
  }
  class CollectionUseProject <<AggregateRoot>> {
    - id: CollectionUseProjectId
    - referenceNumber: ReferenceNumber
    - status: UseStatus
    - originProjectId: CollectionUseProjectId?
    - objects: List of CollectionUseObject
  }
  class RequestedObject <<Entity>> {
  }
  class Document <<Entity>> {
  }
  class DocumentCorrectionItem <<Entity>> {
    - status: DocumentCorrectionStatus
  }
  class CollectionUseObject <<Entity>> {
  }
  class ObjectAccessLog <<AggregateRoot>> {
  }
  class ObjectOccurrenceLog <<AggregateRoot>> {
  }
  class PublicationLog <<AggregateRoot>> {
  }
  class Conversation <<AggregateRoot>> {
  }
  class RequesterContact <<ValueObject>> {
  }
  enum ProposalStatus {
    SUBMITTED
    PENDING
    APPROVED
    REJECTED
    CANCELLED
  }
  enum SubmissionChannel {
    PUBLIC
    AUTHENTICATED
  }
  enum UseStatus {
    CREATED
    IN_PROGRESS
    COMPLETED
    CANCELLED
  }
}

package "public_submission" <<BoundedContext>> {
  class PendingPublicSubmission <<AggregateRoot>> {
    - status: PendingSubmissionStatus
    - proposalReference: String?
  }
  class PublicDocumentSubmission <<Entity>> {
  }
  class ProposalAmendmentToken <<AggregateRoot>> {
    - tokenHash: String
    - expiresAt: DateTime
    - usedAt: DateTime?
  }
  enum PendingSubmissionStatus {
    PENDING_CONFIRMATION
    CONFIRMED
  }
}

package "collection_object_index" <<BoundedContext>> {
  class CollectionArea <<AggregateRoot>> {
  }
  class Collection <<AggregateRoot>> {
  }
  class CuratorAssignment <<ValueObject>> {
  }
  class SourceDocument <<AggregateRoot>> {
    - status: SourceDocumentStatus
  }
  class CollectionObject <<ReadModel>> {
  }
}

package "museum_questions" <<BoundedContext>> {
  class MuseumQuestion <<AggregateRoot>> {
    - status: MuseumQuestionStatus
    - requesterEmail: String
    - answerBody: String?
  }
  enum MuseumQuestionStatus {
    SUBMITTED
    ANSWERED
    OUT_OF_SCOPE
    CLOSED
  }
}

package "notifications" <<BoundedContext>> {
  class Notification <<AggregateRoot>> {
    - recipientPermissionId: PermissionId
    - kind: NotificationKind
    - readAt: DateTime?
    - clearedAt: DateTime?
  }
}

package "reference_numbers" <<BoundedContext>> {
  class ReferencePolicy <<AggregateRoot>> {
    - kind: ReferenceKind
    - status: ReferencePolicyStatus
  }
  class ReferenceMask <<ValueObject>> {
  }
}

package "document_templates" <<BoundedContext>> {
  class DocumentTemplate <<AggregateRoot>> {
    - useType: UseType
    - active: Boolean
  }
}

package "external_publications" <<BoundedContext>> {
  class ExternalPublication <<AggregateRoot>> {
    - resourceType: ExternalPublicationResourceType
    - status: ExternalPublicationStatus
    - accessMode: ExternalPublicationAccessMode
    - profile: ExternalPublicationProfile
  }
  class ExternalPublicationAccess <<Entity>> {
  }
}

package "in-situ reporting and AI" {
  class InSituVisitRecord <<AggregateRoot>> {
  }
  class InSituVisitReport <<AggregateRoot>> {
  }
  class NarrativeFactSnapshot <<Entity>> {
  }
  class GeneratedNarrative <<AggregateRoot>> {
  }
  class MessageTriage <<AggregateRoot>> {
  }
  class PromptTemplate <<AggregateRoot>> {
  }
  class PromptTemplateVersion <<Entity>> {
  }
}

Institution "1" o-- "0..*" Group
User "1" o-- "0..*" Permission
Group "1" o-- "0..*" Permission
User "1" o-- "0..*" PasswordResetToken

Proposal *-- "0..*" RequestedObject
Proposal *-- "0..*" Document
Proposal *-- "0..*" DocumentCorrectionItem
Proposal *-- "0..1" RequesterContact
Proposal --> CollectionUseProject : approval creates/links
CollectionUseProject *-- "0..*" CollectionUseObject
CollectionUseProject --> CollectionUseProject : originProjectId
ObjectAccessLog --> CollectionUseProject
ObjectOccurrenceLog --> CollectionUseProject
PublicationLog --> CollectionUseProject
Conversation --> Proposal

PendingPublicSubmission *-- "0..*" PublicDocumentSubmission
PendingPublicSubmission ..> Proposal : materializes
ProposalAmendmentToken ..> DocumentCorrectionItem : scoped correction ids

CollectionArea "1" o-- "0..*" Collection
Collection "1" o-- "0..*" SourceDocument
SourceDocument "1" o-- "0..*" CollectionObject

MuseumQuestion ..> MessageTriage : optional AI assistance
Notification ..> Proposal : related resource
Notification ..> CollectionUseProject : related resource
ReferencePolicy ..> ReferenceNumber : allocates
DocumentTemplate ..> UseType

InSituVisitRecord ..> CollectionUseProject : exported snapshot
GeneratedNarrative ..> NarrativeFactSnapshot
InSituVisitReport ..> InSituVisitRecord
InSituVisitReport ..> GeneratedNarrative
PromptTemplate "1" o-- "0..*" PromptTemplateVersion
ExternalPublication ..> Proposal
ExternalPublication ..> CollectionUseProject
ExternalPublication ..> InSituVisitReport

@enduml
